--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="shortcut icon" href="IMG/Logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="ICON/ColeccionIconos/style.css">
+    
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="theme-color" content="#121212">
+
+    <link rel="icon" href="IMG/Logo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="IMG/Logo.svg">
 </head>
 <body>
 
