--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                 <img src="IMG/IlustrativaContacto.jpg" alt="Imagen Ilustrativa - Contacto" class="ModalPortada">
                 <div id="EnlacesContacto">
                 <div id="ListaEnlacesContacto">
-                    <a class="ItemEnlacesContacto" href="https://wa.me" target="_blank">
+                    <a class="ItemEnlacesContacto" href="https://wa.me/529994247747" target="_blank">
                         <i class="icon icon-WhatsApp"></i>
                         <div>
                             <span class="TituloContacto">WhatsApp</span>
                             <span class="DescripcionContacto">Iniciar un chat directo para cualquier asunto</span>
                         </div>
                     </a>
-                    <a class="ItemEnlacesContacto" href="mailto:alguien@gmail.com" target="_blank">
+                    <a class="ItemEnlacesContacto" href="mailto:eduardochan_cach@hotmail.com" target="_blank">
                         <i class="icon icon-Mail2"></i>
                         <div>
                             <span class="TituloContacto">E-mail</span>
                             <span class="DescripcionContacto">Escribir un correo electrónico para compartir más detalles</span>
                         </div>
                     </a>
-                    <a class="ItemEnlacesContacto" href="https://docs.google.com/forms/u/0/?pli=1" target="_blank">
+                    <a class="ItemEnlacesContacto" href="https://forms.gle/A5B7pvSFWFqWSEgV9" target="_blank">
                         <i class="icon icon-Formulario2"></i>
                         <div>
                             <span class="TituloContacto">Formulario</span>
@@ -47,9 +47,9 @@
                     </a>
                 </div>
                 <div class="IconosEnlacesContacto">
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram"></i></a>
-                    <a href="https://github.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-GitHub"></i></a>
-                    <a href="https://buymeacoffee.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-BuymeaCoffee"></i></a>
+                    <a href="https://www.instagram.com/ennova_design/" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram"></i></a>
+                    <a href="https://github.com/Edward5126" target="_blank" rel="noopener noreferrer"><i class="icon icon-GitHub"></i></a>
+                    <a href="https://buymeacoffee.com/ennovadesign" target="_blank" rel="noopener noreferrer"><i class="icon icon-BuymeaCoffee"></i></a>
                 </div>
                 </div>
             </div>
@@ -75,8 +75,8 @@
 
         <div> <!--Contenedor derecho-->
             <ul>
-                <li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram1 iconnav"></i></a></li> <!--Contenedores de íconos (Se pondrán después)-->
-                <li><a href="https://wa.me" target="_blank" rel="noopener noreferrer"><i class="icon icon-WhatsApp iconnav"></i></a></li>
+                <li><a href="https://www.instagram.com/ennova_design/" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram1 iconnav"></i></a></li> <!--Contenedores de íconos (Se pondrán después)-->
+                <li><a href="https://wa.me/529994247747" target="_blank" rel="noopener noreferrer"><i class="icon icon-WhatsApp iconnav"></i></a></li>
                 <li><button onclick="AbrirModal()"><span class="TextoDegradado"><i class="icon icon-AvionPapel" id="iconbutton"></i> Contacto</span></button></li>
             </ul>
         </div>
@@ -117,23 +117,23 @@
         <div id="ListaServicios">
             <div class="TarjetaServicio">
                 <span class="NombreServicio">Diseño Web</span>
-                <span class="DescripcionServicio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel perferendis eum, cumque repellendus sit ipsum ex quasi, totam enim vero quo aliquid nemo quae rerum at et delectus porro harum!</span>
+                <span class="DescripcionServicio">Impulsa tu presencia online con un sitio web atractivo, funcional y adaptable a cualquier dispositivo. Ideal para portafolios, negocios, eventos o proyectos personales.</span>
             </div>
             <div class="TarjetaServicio">
                 <span class="NombreServicio">Diseño Publicitario</span>
-                <span class="DescripcionServicio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel perferendis eum, cumque repellendus sit ipsum ex quasi, totam enim vero quo aliquid nemo quae rerum at et delectus porro harum!</span>
+                <span class="DescripcionServicio">Capta la atención de tu audiencia con piezas gráficas impactantes: desde banners y flyers hasta contenido visual para redes sociales, alineado con tus objetivos.</span>
             </div>
             <div class="TarjetaServicio">
                 <span class="NombreServicio">Identidad de Marca</span>
-                <span class="DescripcionServicio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel perferendis eum, cumque repellendus sit ipsum ex quasi, totam enim vero quo aliquid nemo quae rerum at et delectus porro harum!</span>
+                <span class="DescripcionServicio">Construye una marca sólida y memorable con una identidad visual profesional que refleje tus valores: logotipo, paleta de colores, tipografías y más.</span>
             </div>
             <div class="TarjetaServicio">
                 <span class="NombreServicio">Diseño UI / UX</span>
-                <span class="DescripcionServicio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel perferendis eum, cumque repellendus sit ipsum ex quasi, totam enim vero quo aliquid nemo quae rerum at et delectus porro harum!</span>
+                <span class="DescripcionServicio">Mejora la experiencia de tus usuarios con interfaces funcionales y atractivas. Soluciones pensadas para conectar de forma intuitiva con quienes navegan tu sitio o app.</span>
             </div>
             <div class="TarjetaServicio">
                 <span class="NombreServicio">Identidad de creador</span>
-                <span class="DescripcionServicio">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel perferendis eum, cumque repellendus sit ipsum ex quasi, totam enim vero quo aliquid nemo quae rerum at et delectus porro harum!</span>
+                <span class="DescripcionServicio">Destaca como creador de contenido con una imagen visual única y profesional. Perfecto para streamers, influencers y proyectos digitales que buscan diferenciarse.</span>
             </div>
         </div>
     </section>
@@ -145,9 +145,12 @@
         <div id="ContenedorTextoAcercaDe">
             <span class="SecText">Acerca de</span>
             <span class="MainText">E-nnova Design</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet pariatur nulla animi nemo? Quasi, quidem repellat? Eos, tempora repellendus deserunt at praesentium reiciendis dolor. Eveniet placeat autem omnis cumque laboriosam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet pariatur nulla animi nemo? Quasi, quidem repellat? Eos, tempora repellendus deserunt at praesentium reiciendis dolor. Eveniet placeat autem omnis cumque laboriosam.</p>
-            <a href="DOCS/CurriculumEjemplo.pdf" download="Currículum de Ejemplo" class="CTA">Descargar CV</a>
+            <p>¡Qué tal! Soy <b>Eduardo Chan</b>, un estudiante universitario que se adentró al mundo del diseño gráfico y desarrollo Front-End como afición.
+            <p>Creé E-nnova Design con la intención de generar ingresos para mis estudios mientras ayudo a otras personas para que lancen su proyecto con una identidad visual sólida desde su inicio.</p>
+            <p>Si está comenzando con un proyecto o negocio y desea contar con una imagen de calidad desde sus primeros pasos, puedo ayudarle a conseguirlo.</p>
+            <br>
+            <p><i>¡Hagamos que su proyecto nazca con estilo!</i></p>
+            <!-- <a href="DOCS/CurriculumEjemplo.pdf" download="Currículum de Ejemplo" class="CTA">Descargar CV</a> -->
         </div>
     </section>
 
@@ -155,64 +158,14 @@
         <h2>Testimonios</h2>
         <div class="ListaTestimonios">
           <div class="Testimonio">
-            <p class="Cita">"Un servicio excelente, superó todas nuestras expectativas."</p>
-            <p class="Autor">— Ana López, CEO de Creativa</p>
-          </div>
-          <div class="Testimonio">
-            <p class="Cita">"Profesionalismo y creatividad en cada detalle. ¡Recomendado!"</p>
-            <p class="Autor">— Carlos Méndez, Fundador de StartApp</p>
-          </div>
-          <div class="Testimonio">
-            <p class="Cita">"Nos ayudaron a dar identidad a nuestra marca con un diseño único."</p>
-            <p class="Autor">— Laura Ramírez, Directora de Nova Studio</p>
+            <p class="Cita">"Logró una identidad visual sólida, moderna y bien alineada con la esencia del equipo."</p>
+            <p class="Autor">— Joksan Chavez, miembro de Atlantis Force</p>
           </div>
         </div>
 
         <div class="CarruselEmpresas">
-            <div class="CintaLogos">
-              <img src="https://cdn.simpleicons.org/google/ffffff" alt="Google" />
-              <img src="https://cdn.simpleicons.org/facebook/ffffff" alt="Facebook" />
-              <img src="https://cdn.simpleicons.org/amazon/ffffff" alt="Amazon" />
-              <img src="https://cdn.simpleicons.org/spotify/ffffff" alt="Spotify" />
-              <img src="https://cdn.simpleicons.org/netflix/ffffff" alt="Netflix" />
-              <img src="https://cdn.simpleicons.org/beats/ffffff" alt="Microsoft" />
-              <img src="https://cdn.simpleicons.org/huawei/ffffff" alt="Adobe" />
-              <img src="https://cdn.simpleicons.org/airbnb/ffffff" alt="Airbnb" />
-            </div>
-
-            <div class="CintaLogos">
-              <img src="https://cdn.simpleicons.org/google/ffffff" alt="Google" />
-              <img src="https://cdn.simpleicons.org/facebook/ffffff" alt="Facebook" />
-              <img src="https://cdn.simpleicons.org/amazon/ffffff" alt="Amazon" />
-              <img src="https://cdn.simpleicons.org/spotify/ffffff" alt="Spotify" />
-              <img src="https://cdn.simpleicons.org/netflix/ffffff" alt="Netflix" />
-              <img src="https://cdn.simpleicons.org/beats/ffffff" alt="Microsoft" />
-              <img src="https://cdn.simpleicons.org/huawei/ffffff" alt="Adobe" />
-              <img src="https://cdn.simpleicons.org/airbnb/ffffff" alt="Airbnb" />
-            </div>
-
-            <div class="CintaLogos">
-              <img src="https://cdn.simpleicons.org/google/ffffff" alt="Google" />
-              <img src="https://cdn.simpleicons.org/facebook/ffffff" alt="Facebook" />
-              <img src="https://cdn.simpleicons.org/amazon/ffffff" alt="Amazon" />
-              <img src="https://cdn.simpleicons.org/spotify/ffffff" alt="Spotify" />
-              <img src="https://cdn.simpleicons.org/netflix/ffffff" alt="Netflix" />
-              <img src="https://cdn.simpleicons.org/beats/ffffff" alt="Microsoft" />
-              <img src="https://cdn.simpleicons.org/huawei/ffffff" alt="Adobe" />
-              <img src="https://cdn.simpleicons.org/airbnb/ffffff" alt="Airbnb" />
-            </div>
-
-            <div class="CintaLogos">
-              <img src="https://cdn.simpleicons.org/google/ffffff" alt="Google" />
-              <img src="https://cdn.simpleicons.org/facebook/ffffff" alt="Facebook" />
-              <img src="https://cdn.simpleicons.org/amazon/ffffff" alt="Amazon" />
-              <img src="https://cdn.simpleicons.org/spotify/ffffff" alt="Spotify" />
-              <img src="https://cdn.simpleicons.org/netflix/ffffff" alt="Netflix" />
-              <img src="https://cdn.simpleicons.org/beats/ffffff" alt="Microsoft" />
-              <img src="https://cdn.simpleicons.org/huawei/ffffff" alt="Adobe" />
-              <img src="https://cdn.simpleicons.org/airbnb/ffffff" alt="Airbnb" />
-            </div>
-          </div>
+            
+        </div>
     </section>
 
     <footer>
@@ -220,12 +173,12 @@
             <div>
                 <img src="IMG/LogoHorizontal.svg" alt="Logo de E-nnova Design">
                 <ul class="ListaEnlacesContacto">
-                    <li><a href="https://api.whatsapp.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-WhatsApp"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram"></i></a></li>
-                    <li><a href="https://github.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-GitHub"></i></a></li>
-                    <li><a href="mailto:alguien@gmail.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-Mail2"></i></a></li>
-                    <li><a href="https://docs.google.com/forms/u/0/?pli=1" target="_blank" rel="noopener noreferrer"><i class="icon icon-Formulario2"></i></a></li>
-                    <li><a href="https://buymeacoffee.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-BuymeaCoffee"></i></a></li>
+                    <li><a href="https://wa.me/529994247747" target="_blank" rel="noopener noreferrer"><i class="icon icon-WhatsApp"></i></a></li>
+                    <li><a href="https://www.instagram.com/ennova_design/" target="_blank" rel="noopener noreferrer"><i class="icon icon-Instagram"></i></a></li>
+                    <li><a href="https://github.com/Edward5126" target="_blank" rel="noopener noreferrer"><i class="icon icon-GitHub"></i></a></li>
+                    <li><a href="mailto:eduardochan_cach@hotmail.com" target="_blank" rel="noopener noreferrer"><i class="icon icon-Mail2"></i></a></li>
+                    <li><a href="https://forms.gle/A5B7pvSFWFqWSEgV9" target="_blank" rel="noopener noreferrer"><i class="icon icon-Formulario2"></i></a></li>
+                    <li><a href="https://buymeacoffee.com/ennovadesign" target="_blank" rel="noopener noreferrer"><i class="icon icon-BuymeaCoffee"></i></a></li>
                 </ul>
             </div>
             <div id="DivEnlacesFooter">
@@ -233,13 +186,13 @@
                     <li><a href="#Inicio">Inicio</a></li>
                     <li><a href="#Portafolio">Portafolio</a></li>
                     <li><a href="#Servicios">Servicios</a></li>
-                    <li><a href="#AcercaDe">AcercaDe</a></li>
+                    <li><a href="#AcercaDe">Acerca De</a></li>
                     <li><a href="#Testimonios">Testimonios</a></li>
                 </ul>
             </div>
         </div>
         <div>
-            E-nnova Design 2024 - Todos los derechos reservados
+            E-nnova Design 2025 - Todos los derechos reservados
         </div>
     </footer>
 
