--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
             <p class="Cita">"Logró una identidad visual sólida, moderna y bien alineada con la esencia del equipo."</p>
             <p class="Autor">— Joksan Chavez, miembro de Atlantis Force</p>
           </div>
+          <div class="Testimonio">
+            <p class="Cita">"Gran servicio, buenos diseños y gran atención."</p>
+            <p class="Autor">— Mariana García, líder de CAFI y STM FIUADY</p>
+          </div>
         </div>
 
         <div class="CarruselEmpresas">
